AUTOMAKE_OPTIONS = 1.7

NULL =

SUBDIRS =  				\
	build				\
	src				\
	$(NULL)

appdir = $(IPA_DATA_DIR)/oauth
app_DATA =				\
	index.html 			\
	$(NULL)

EXTRA_DIST =                            \
        doc                             \
        jsl.conf                        \
        less                            \
        README-LICENSE.txt              \
        test                            \
        util                            \
        $(app_DATA)                     \
        $(NULL)
